--- a/package.json
+++ b/package.json
@@ -1,78 +1,73 @@
 {
-  "name": "talente-saas-miniprogram",
-  "version": "1.0.0",
-  "description": "",
-  "templateInfo": {
-    "name": "default",
-    "typescript": true,
-    "css": "sass"
-  },
+  "name": "uni-preset-vue",
+  "version": "0.0.0",
   "scripts": {
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
-    "build:h5": "taro build --type h5",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
-    "dev:swan": "npm run build:swan -- --watch",
-    "dev:alipay": "npm run build:alipay -- --watch",
-    "dev:tt": "npm run build:tt -- --watch",
-    "dev:h5": "npm run build:h5 -- --watch",
-    "dev:rn": "npm run build:rn -- --watch",
-    "dev:qq": "npm run build:qq -- --watch",
-    "dev:jd": "npm run build:jd -- --watch",
-    "dev:quickapp": "npm run build:quickapp -- --watch"
+    "dev:app": "uni -p app",
+    "dev:app-android": "uni -p app-android",
+    "dev:app-ios": "uni -p app-ios",
+    "dev:custom": "uni -p",
+    "dev:h5": "uni",
+    "dev:h5:ssr": "uni --ssr",
+    "dev:mp-alipay": "uni -p mp-alipay",
+    "dev:mp-baidu": "uni -p mp-baidu",
+    "dev:mp-jd": "uni -p mp-jd",
+    "dev:mp-kuaishou": "uni -p mp-kuaishou",
+    "dev:mp-lark": "uni -p mp-lark",
+    "dev:mp-qq": "uni -p mp-qq",
+    "dev:mp-toutiao": "uni -p mp-toutiao",
+    "dev:mp-weixin": "uni -p mp-weixin",
+    "dev:quickapp-webview": "uni -p quickapp-webview",
+    "dev:quickapp-webview-huawei": "uni -p quickapp-webview-huawei",
+    "dev:quickapp-webview-union": "uni -p quickapp-webview-union",
+    "build:app": "uni build -p app",
+    "build:app-android": "uni build -p app-android",
+    "build:app-ios": "uni build -p app-ios",
+    "build:custom": "uni build -p",
+    "build:h5": "uni build",
+    "build:h5:ssr": "uni build --ssr",
+    "build:mp-alipay": "uni build -p mp-alipay",
+    "build:mp-baidu": "uni build -p mp-baidu",
+    "build:mp-jd": "uni build -p mp-jd",
+    "build:mp-kuaishou": "uni build -p mp-kuaishou",
+    "build:mp-lark": "uni build -p mp-lark",
+    "build:mp-qq": "uni build -p mp-qq",
+    "build:mp-toutiao": "uni build -p mp-toutiao",
+    "build:mp-weixin": "uni build -p mp-weixin",
+    "build:quickapp-webview": "uni build -p quickapp-webview",
+    "build:quickapp-webview-huawei": "uni build -p quickapp-webview-huawei",
+    "build:quickapp-webview-union": "uni build -p quickapp-webview-union",
+    "type-check": "vue-tsc --noEmit"
   },
-  "browserslist": [
-    "last 3 versions",
-    "Android >= 4.1",
-    "ios >= 8"
-  ],
-  "author": "",
   "dependencies": {
-    "@babel/runtime": "^7.7.7",
-    "@tarojs/components": "3.6.8",
-    "@tarojs/helper": "3.6.8",
-    "@tarojs/plugin-framework-vue3": "3.6.8",
-    "@tarojs/plugin-platform-alipay": "3.6.8",
-    "@tarojs/plugin-platform-h5": "3.6.8",
-    "@tarojs/plugin-platform-jd": "3.6.8",
-    "@tarojs/plugin-platform-qq": "3.6.8",
-    "@tarojs/plugin-platform-swan": "3.6.8",
-    "@tarojs/plugin-platform-tt": "3.6.8",
-    "@tarojs/plugin-platform-weapp": "3.6.8",
-    "@tarojs/runtime": "3.6.8",
-    "@tarojs/shared": "3.6.8",
-    "@tarojs/taro": "3.6.8",
-    "pinia": "^2.1.4",
-    "vue": "^3.0.0"
+    "@dcloudio/uni-app": "3.0.0-3080720230703001",
+    "@dcloudio/uni-app-plus": "3.0.0-3080720230703001",
+    "@dcloudio/uni-components": "3.0.0-3080720230703001",
+    "@dcloudio/uni-h5": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-alipay": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-baidu": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-jd": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-kuaishou": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-lark": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-qq": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-toutiao": "3.0.0-3080720230703001",
+    "@dcloudio/uni-mp-weixin": "3.0.0-3080720230703001",
+    "@dcloudio/uni-quickapp-webview": "3.0.0-3080720230703001",
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.1.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.0",
-    "@tarojs/cli": "3.6.8",
-    "@tarojs/taro-loader": "3.6.8",
-    "@tarojs/webpack5-runner": "3.6.8",
-    "@types/node": "^18.15.11",
-    "@types/webpack-env": "^1.13.6",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@vue/babel-plugin-jsx": "^1.0.6",
-    "@vue/compiler-sfc": "^3.0.0",
-    "babel-preset-taro": "3.6.8",
-    "css-loader": "3.4.2",
-    "eslint": "^8.12.0",
-    "eslint-config-taro": "3.6.8",
-    "eslint-plugin-vue": "^8.0.0",
-    "postcss": "^8.4.18",
-    "style-loader": "1.3.0",
-    "stylelint": "^14.4.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.1.0",
-    "vue-loader": "^17.0.0",
-    "webpack": "5.78.0"
+    "@dcloudio/types": "^3.3.2",
+    "@dcloudio/uni-automator": "3.0.0-3080720230703001",
+    "@dcloudio/uni-cli-shared": "3.0.0-3080720230703001",
+    "@dcloudio/uni-stacktracey": "3.0.0-3080720230703001",
+    "@dcloudio/vite-plugin-uni": "3.0.0-3080720230703001",
+    "@uni-helper/uni-app-types": "^0.5.8",
+    "@vue/tsconfig": "^0.1.3",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
+    "typescript": "^4.9.4",
+    "unplugin-auto-import": "^0.16.6",
+    "vite": "4.0.4",
+    "vue-tsc": "^1.0.24"
   }
 }
