--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 # .env.development
 
-VUE_APP_TITLE = 'dev'
-VUE_APP_BASEURL = http://192.168.50.19:48080/
+VITE_APP_TITLE = 达人易_dev
+VITE_APP_API_BASE_URL  = xxx
