docs：update docs

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "uni-preset-vue",
-  "version": "0.0.0",
+  "name": "达人易",
+  "version": "0.0.1",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev:app": "uni -p app",
