feat: request and format

--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 # .env.development
 
 VITE_APP_TITLE = 达人易_dev
-VITE_APP_API_BASE_URL  = xxx
+VITE_APP_API_BASE_URL = https://talente-api.dev.mosh.com
