--- a/package.json
+++ b/package.json
@@ -82,5 +82,9 @@
     "unplugin-auto-import": "^0.16.6",
     "vite": "4.0.4",
     "vue-tsc": "^1.0.24"
+  },
+  "engines": {
+    "node": ">=14 <17",
+    "pnpm": ">=8"
   }
 }
