--- a/package.json
+++ b/package.json
@@ -79,6 +79,8 @@
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "typescript": "^4.9.4",
+    "unocss": "^0.58.0",
+    "unocss-preset-weapp": "^0.57.1",
     "unplugin-auto-import": "^0.16.6",
     "vite": "4.0.4",
     "vue-tsc": "^1.0.24"
