--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,13 +19,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
-    "./auto-imports.d.ts"
-  ],
+  "include": ["src/**/*.ts", "src/dts/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "exclude": ["dist", "node_modules", "unpackage", "src/**/*.nvue"],
 
   // uni-app Component type prompt
