fix: uni类型以及全局类型定义

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,9 @@
     "node": true
   },
   "globals": {
-    "uni": true
+    "uni": true,
+    "UniApp": true,
+    "Glo": true
   },
   "extends": [
     "eslint:recommended",
