--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,11 @@
 {
-    "recommendations": [
-      "vscode-icons-team.vscode-icons",
-      "stylelint.vscode-stylelint",
-      "dbaeumer.vscode-eslint",
-      "esbenp.prettier-vscode",
-      "vue.volar",
-      "eamodio.gitlens",
-    ]
-  }
-  
+  "recommendations": [
+    "vscode-icons-team.vscode-icons",
+    "stylelint.vscode-stylelint",
+    "dbaeumer.vscode-eslint",
+    "esbenp.prettier-vscode",
+    "vue.volar",
+    "eamodio.gitlens",
+    "OBKoro1.korofileheader"
+  ]
+}
