--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3080720230703001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3080720230703001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3080720230703001",
-    "@dcloudio/uni-ui": "^1.4.28",
     "pinia": "2.0.36",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "wot-design-uni": "^1.2.18"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
