--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "unocss": "^0.58.0",
     "unocss-preset-weapp": "^0.57.1",
     "unplugin-auto-import": "^0.16.6",
-    "vite": "4.0.4",
+    "vite": "^4.5.3",
     "vue-tsc": "^1.0.24"
   },
   "config": {
